2008-07-02  Donal K. Fellows  <dkf@users.sf.net>

	* aclocal.m4 (TEAX_SUBST_RESOURCE): Stop trying to build the resource
	descriptor in when using the VC toolchain for now; it seems to be
	causing problems with the versions built for the teapot.

2008-06-29  Donal K. Fellows  <dkf@users.sf.net>

	* README.txt: Update to be more relevant to this distribution.
	* many files: Fix copyrights.

	* doc/object.n (EXAMPLES): Fix incorrect usage of oo::define to be
	done with oo::objdefine instead. [Bug 2004480]

2008-06-26  Donal K. Fellows  <dkf@users.sf.net>

	=== RELEASE OF TCLOO VERSION 0.5 ===

	* configure.in, generic/tclOO.h, tests/oo.test, win/TclOO.rc: Update
	version numbers for 0.5 release. This version constitutes the point
	where the merge to Tcl 8.6a0 (after TIP#257) was finalized;
	intermediate changes from 0.4 are corrected issues discovered during
	the merge and immediate wider-scale testing.

	* Makefile.in (genstubs):			 Change the stub table
	* generic/tclOOStubLib.c (TclOOInitializeStubs): generation to use the
	* generic/tclOO.c (Tcloo_Init):			 Tcl system, not the
	* generic/tclOO.decls:				 Tile system.
	* tools/genStubs.tcl: Removed no-longer-needed file.

	*** POTENTIAL INCOMPATABILITY ***
	If you use the TclOO C API, you *must* recompile against this new
	version. The layout of the stubs table is different. Many apologies.

2008-06-19  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tclOO.c (Tcl_ObjectContextInvokeNext): Corrected 'next' (at
	* tests/oo.test (oo-7.8):	end of a call chain) to make it
	* doc/next.n:			consistent with the TIP. [Bug 1998244]

	* generic/tclOOCall.c (AddSimpleClassChainToCallContext): Make sure
	* tests/oo.test (oo-14.8): that class mixins are processed in the
	documented order. [Bug 1998221]

2008-06-09  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tclOOCall.c (TclOOGetSortedMethodList): Plug memory leak
	that occurred when all methods were hidden. [Bug 1987817]

2008-06-02  Donal K. Fellows  <dkf@users.sf.net>
