@@ -7,9 +7,9 @@
 # See the file "license.terms" for information on usage and redistribution of
 # this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: oo.test,v 1.32 2008/06/26 15:10:50 dkf Exp $
+# RCS: @(#) $Id: oo.test,v 1.33 2008/07/02 13:53:05 dkf Exp $
 
-package require TclOO 0.5 ;# Must match value in configure.in
+package require TclOO 0.5.1 ;# Must match value in configure.in
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest 2
     namespace import -force ::tcltest::*
