@@ -2,8 +2,8 @@
 
 LANGUAGE 0x9, 0x2
 VS_VERSION_INFO VERSIONINFO
-    FILEVERSION		0,5,0,2
-    PRODUCTVERSION	0,5,0,2
+    FILEVERSION		0,5,1,2
+    PRODUCTVERSION	0,5,1,2
     FILEFLAGSMASK	0x3fL
 #ifdef DEBUG
     FILEFLAGS	 	VS_FF_DEBUG
